--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,151 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  box-sizing: border-box;
+  padding: 0;
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+html {
+  text-align: center;
+}
+.header {
+  color: #ead7d7;
+  font-size: 3rem;
+}
+input {
+  border: 5px solid white;
+  -webkit-box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1),
+    0 0 16px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1), 0 0 16px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1), 0 0 16px rgba(0, 0, 0, 0.1);
+  padding: 20px 50px;
+  background: rgba(255, 255, 255, 0.973);
+  outline: none;
+}
+
+input[type="text"] {
+  font-size: 2rem;
+}
+
+input[type="text"]::placeholder {
+  color: #999;
+  font-style: italic;
+}
+
+.todo-list {
+  background: rgba(255, 255, 255, 0.973);
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1), 0 0 18px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 10px;
+  max-width: 480px;
+  margin: 0 auto;
+}
+
+.todo-list h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0 0 10px;
+}
+
+.todo-list ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.todo-list li {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+  border-bottom: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+.todo-list input[type="checkbox"] {
+  margin-right: 10px;
+  height: 20px;
+  width: 20px;
+  }
+
+.to-do-list li label {
+  margin-right: 10px;
+  flex: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  }
+
+.todo-list label {
+  flex: 1;
+  font-size: 2rem;
+  color: #999;
+  }
+
+.todo-list button {
+  background-color: #ead7d7;
+  color: #fff;
+  font-size: 20px;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.todo-list button:hover {
+  background-color: #555;
+}
+
+.footer {
+  text-align: center;
+  margin: 0 auto;
+  background-color: #ead7d7;
+  color: #999;
+  font-size: 1.5rem;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1), 0 0 18px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 10px;
+  max-width: 480px;
+}
+
+@media screen and (max-width: 540px) {
+  .todo-list {
+    max-width: 85%;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  input {
+    font-size: 2rem;
+    padding: 15px 40px;
+    width: 67%;
+  }
+
+  input[type="text"] {
+    font-size: 1.3rem;
+  }
+  .todo-list label {
+    font-size: 1.6rem;
+  }
+
+  .footer{
+    width: 85%;
+  }
 }
