--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ input[type="text"]::placeholder {
   margin-right: 10px;
   height: 20px;
   width: 20px;
-  }
+}
 
 .to-do-list li label {
   margin-right: 10px;
@@ -90,13 +90,13 @@ input[type="text"]::placeholder {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  }
+}
 
 .todo-list label {
   flex: 1;
   font-size: 2rem;
   color: #999;
-  }
+}
 
 .todo-list button {
   background-color: #ead7d7;
@@ -114,15 +114,29 @@ input[type="text"]::placeholder {
 }
 
 .footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   text-align: center;
   margin: 0 auto;
   background-color: #ead7d7;
   color: #999;
-  font-size: 1.5rem;
+  font-size: 1rem;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1), 0 0 18px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  padding: 10px;
-  max-width: 480px;
+  max-width: 500px;
+}
+.footer span {
+  min-width: 58px;
+  cursor: pointer;
+  color: #dc3545;
+  cursor: pointer;
+  font-size: 1.5rem;
+  height: 40px;
+  padding: 0;
+  width: 40px;
+  vertical-align: middle;
+margin-top: 10.3px;
 }
 
 @media screen and (max-width: 540px) {
@@ -145,7 +159,7 @@ input[type="text"]::placeholder {
     font-size: 1.6rem;
   }
 
-  .footer{
-    width: 85%;
+  .footer {
+    width: 90%;
   }
 }
